--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ https://templatemo.com/tm-562-space-dynamic
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="https://script.google.com/macros/s/AKfycbzjPVBiE-jSO-Sys5_OGLRprbJKpaQsp5HKxIs2qhUYWCAbXvAakGrlS3hgLJvZ6LSfJg/exec" method="post">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
@@ -406,7 +406,7 @@ https://templatemo.com/tm-562-space-dynamic
     </div>
   </footer>
   <!-- Scripts -->
-  <script>
+<!--   <script>
             const scriptURL = 'https://script.google.com/macros/s/AKfycbzjPVBiE-jSO-Sys5_OGLRprbJKpaQsp5HKxIs2qhUYWCAbXvAakGrlS3hgLJvZ6LSfJg/exec'
             const form = document.forms['google-sheet']
           
@@ -416,7 +416,7 @@ https://templatemo.com/tm-562-space-dynamic
                 .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
                 .catch(error => console.error('Error!', error.message))
             })
-          </script>
+          </script> -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
