--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ https://templatemo.com/tm-562-space-dynamic
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="main-button ">Send Message</button>
+                  <button type="submit" id="form-submit" class="main-button ">submit</button>
                 </fieldset>
                 <label for="" style="color:rgb(235, 74, 74) ;">
                 </label>
