--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ https://templatemo.com/tm-562-space-dynamic
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="surname" name="Nurname" id="surname" placeholder="Surname" autocomplete="on" required>
+                  <input type="surname" name="Surname" id="surname" placeholder="Surname" autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
