Add to reload location

--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@ https://templatemo.com/tm-562-space-dynamic
               fetch(scriptURL, { method: 'POST', body: new FormData(form)})
                 .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
                 .catch(error => console.error('Error!', error.message))
+                  location.reload()
             })
           </script>
   <script src="vendor/jquery/jquery.min.js"></script>
