--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ https://templatemo.com/tm-562-space-dynamic
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post" name="google-sheet">
+          <form id="contact"  method="post" name="google-sheet">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
@@ -375,12 +375,17 @@ https://templatemo.com/tm-562-space-dynamic
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input name="Phno" type="tel" class="form-control" id="message" pattern="[6-9]{1}[0-9]{9}" placeholder="phone Number" required="" minlength="10" maxlength="10"></input>  
+                  <input name="Phno" type="tel" class="form-control" id="phno"  placeholder="phone Number" required="" minlength="10" maxlength="10"></input>  
+                </fieldset>
+              </div>
+             <div class="col-lg-12">
+                <fieldset>
+                  <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="main-button ">submit</button>
+                  <button type="submit" id="form-submit" class="main-button ">Send Message</button>
                 </fieldset>
                 <label for="" style="color:rgb(235, 74, 74) ;">
                 </label>
